Added html changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,50 @@
 <html>
   <head>
     <title>krishna careers</title>
+    <style>
+      h1{
+        font-size:40px;
+        font: family Roboto;
+        font-weight:normal;
+        color:rgb(100, 100, 100);
+        text-align: center
+      }
+     h2{
+        font-size:32px;
+        font: family Roboto;
+        font-weight:normal;
+        color:rgb(50, 50, 50);
+        text-align: center
+      }
+      .bodytext{
+        font: family Roboto;
+        color:rgb(100, 100, 100);
+       }
+      #career {
+        width:100%;
+        height: 360;
+        object-fit: cover;
+      }
+      #container
+        max width: 720px;
+        margin left:0 auto 0 auto;
+    </style>
   </head>
   <body>
-    Hello there, you will learn about the job openings at krishna here.
+    <div id="container">
+    <h1>KRISHNA CAREERS</h1>
+    <img id="carrer" src="https://mycustomstaffing.com/wp-content/uploads/2017/11/How-to-advance-your-career-.jpg" height="200" width="600">
+
+  <h2>About Krishna:</h2>
+    <p class="bodytext">
+      The anecdotes and narratives of Krishna's life are generally titled as Krishna Līlā. He is a central character in the Mahabharata, the Bhagavata Purana, the Brahma Vaivarta Purana, and the Bhagavad Gita, and is mentioned in many Hindu philosophical, theological, and mythological texts.[19] They portray him in various perspectives: as a god-child, a prankster, a model lover, a divine hero, and the universal supreme being.[20] His iconography reflects these legends, and shows him in different stages of his life, such as an infant eating butter, a young boy playing a flute, a young boy with Radha or surrounded by female devotees; or a friendly charioteer giving counsel to Arjuna.[21]
+    </p>
+    <h2>Open positions</h2>
+    <p class="bodytext">TODO- show the jobs here</p>
+      <div style="text-align:center;">
+         <button>Contact us</button>
+        <p>copyright 2023,Kanha</p>
+      </div>
+    </div>
   </body>
 </html>
