--- a/templates/home.html
+++ b/templates/home.html
@@ -2,49 +2,34 @@
 <html>
   <head>
     <title>krishna careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <style>
-      h1{
-        font-size:40px;
-        font: family Roboto;
-        font-weight:normal;
-        color:rgb(100, 100, 100);
-        text-align: center
+      #banner {
+        height: 360px;
+        width: 100%;
       }
-     h2{
-        font-size:32px;
-        font: family Roboto;
-        font-weight:normal;
-        color:rgb(50, 50, 50);
-        text-align: center
-      }
-      .bodytext{
-        font: family Roboto;
-        color:rgb(100, 100, 100);
-       }
-      #career {
-        width:100%;
-        height: 360;
-        object-fit: cover;
-      }
-      #container
-        max width: 720px;
-        margin left:0 auto 0 auto;
     </style>
   </head>
   <body>
-    <div id="container">
-    <h1>KRISHNA CAREERS</h1>
-    <img id="carrer" src="https://mycustomstaffing.com/wp-content/uploads/2017/11/How-to-advance-your-career-.jpg" height="200" width="600">
+    <div class .container>
+    <h1 class="text-center mt-4 mb-4">
+      {{company_name}} CAREERS
+    </h1>
+    <img class="img-fluid" id="banner" src="https://surekah-kanha-1.surekha111.repl.co/static/banner.jpeg" height="600" width="600" >
 
-  <h2>About Krishna:</h2>
-    <p class="bodytext">
+  <h2 class="text-center mt-2 mb-4">About Krishna:</h2>
+    <p class="lead">
       The anecdotes and narratives of Krishna's life are generally titled as Krishna Līlā. He is a central character in the Mahabharata, the Bhagavata Purana, the Brahma Vaivarta Purana, and the Bhagavad Gita, and is mentioned in many Hindu philosophical, theological, and mythological texts.[19] They portray him in various perspectives: as a god-child, a prankster, a model lover, a divine hero, and the universal supreme being.[20] His iconography reflects these legends, and shows him in different stages of his life, such as an infant eating butter, a young boy playing a flute, a young boy with Radha or surrounded by female devotees; or a friendly charioteer giving counsel to Arjuna.[21]
     </p>
-    <h2>Open positions</h2>
-    <p class="bodytext">TODO- show the jobs here</p>
-      <div style="text-align:center;">
-         <button>Contact us</button>
-        <p>copyright 2023,Kanha</p>
+    <h2 class="text-center mt-2 mb-4">Open positions</h2>
+    <p>
+      {{jobs}}
+    </p>
+      <div class="text-center">
+         <button class="btn btn-primary btn-lg">Contact us</button>
+        <p class="mt-4">copyright 2023,Kanha</p>
       </div>
     </div>
   </body>
